--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 client/node_modules
 client/package-lock.json
 
+server/node_modules
+server/package-lock.json
+server/.env
 
 
 # Editor directories and files
